--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "critters": "^0.0.23",
     "css-loader": "^7.1.2",
     "eslint-config-next": "15.2.4",
+    "pino-pretty": "^13.0.0",
     "postcss": "^8.5.3",
     "postcss-import": "^16.1.0",
     "postcss-preset-env": "^10.1.5",
